--- a/mysite/static/general/styles.css
+++ b/mysite/static/general/styles.css
@@ -1,5 +1,7 @@
 h1 { color: #000; font-size: 24px; font-weight: 800; line-height: 40px; text-transform: uppercase; }
 
+
+
 * {
   font-family: 'Raleway', sans-serif;
 }
@@ -54,10 +56,7 @@ ul {
   overflow: auto;
   border:1px solid #000;
 }
-iframe {
-  width:40%;
-  height: 300px;
-}
+
 .iframe-container{
   display: flex;
   justify-content: center;
@@ -78,4 +77,37 @@ iframe {
 
 .reporte-a:hover {
   background-color:#111;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid black;
+  text-align: left;
+  padding: 8px;
+}
+
+.acciones_tabla {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.filters-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.filters-container input {
+  height: 30px;
+}
+
+.filters-container .filter-element {
+  display: flex;
+  gap: 30px;
+  align-items: center;
 }
