--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,7 +1,14 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../../../static/base/styles.css" />
+    <link href="//cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css" />
 </head>
 
+{% block extrajs %}
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+
+{% endcompress %}
 <ul class="navbar-container">
     {% if user.is_authenticated %}
         <h1 class="supertitle">Bienvenido, {{user}}</h1>
