--- a/mysite/templates/pagos/control.html
+++ b/mysite/templates/pagos/control.html
@@ -6,25 +6,26 @@
 
 {% block content %}
 {% csrf_token %}
-<table id="datatable_pagos">
+<table>
+    <tr>
+        <th>Codigo de Estudiante</th>
+        <th>Fecha Pago</th>
+        <th>Codigo De Curso</th>
+        <th>Tipo de pago</th>
+        <th>Monto</th>
+        <th>Tipo de Moneda</th>
+        <th>Acciones</th>
+    </tr>
+    {% for pago in pagos %}
+    <tr>
+        <th>{{pago.user.username}}</th>
+        <th>{{pago.fecha_pago}}</th>
+        <th>{{pago.codigo_curso.codigo}}</th>
+        <th>{{pago.tipo_pago.nombre}}</th>
+        <th>{{pago.cantidad}}</th>
+        <th>{{pago.moneda.nombre}}</th>
+        <th><button>Eliminar</button><button>Editar</button></th>
+    </tr>  
+    {% endfor%}
 </table>
-<script language="javascript">
-
-    $(document).ready(function() {
-        AjaxDatatableViewUtils.initialize_table(
-            $('#datatable_pagos'),
-            "{% url 'ajax_datatable_pagos' %}",
-            {
-                processing: false,
-                autoWidth: false,
-                full_row_select: true,
-                scrollX: false
-            }, {
-                // extra_data
-                // ...
-            },
-        );
-    });
-
-</script>
 {% endblock content %}
