Ingreso de pagos

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -16,6 +16,7 @@
             <li class="dropbtn">Usuarios</li>
                 <div class="dropdown-content">
                     <a class="navbar-a" href="{% url 'usuarios:usuarios_listado' %}">Listado</a>
+                    <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
                 </div>
             </div>
         </div>
