--- a/mysite/templates/usuarios/control.html
+++ b/mysite/templates/usuarios/control.html
@@ -11,7 +11,7 @@
         <th>Codigo</th>
         <th>Nombres</th>
         <th>Apellidos</th>
-        <th>email</th>
+        <th>Correo Electronico</th>
         <th>DPI</th>
         <th>Telefono</th>
         <th>Direccion</th>
