add dataTable Bootstrap and view request json

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -1,5 +1,13 @@
 <head>
     <link rel="stylesheet" type="text/css" href="../../../static/base/styles.css" />
+    <style>
+        html, body {
+            padding: 0px;
+            margin: 0px;
+        }
+    </style>
+    {% block scripts %}
+    {% endblock scripts %}
 </head>
 
 <ul class="navbar-container">
