--- a/mysite/templates/pagos/control.html
+++ b/mysite/templates/pagos/control.html
@@ -1,31 +1,77 @@
-<head>
-    <link rel="stylesheet" type="text/css" href="../../../static/general/styles.css" />
-</head>
-
 {% extends 'base.html' %}
+<head>
+    {% block scripts %}
+    <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" /> -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
+    {% endblock scripts %}
+</head>
 
 {% block content %}
 {% csrf_token %}
-<table>
-    <tr>
-        <th>Codigo de Estudiante</th>
-        <th>Fecha Pago</th>
-        <th>Codigo De Curso</th>
-        <th>Tipo de pago</th>
-        <th>Tipo de Moneda</th>
-        <th>Monto</th>
-        <th>Acciones</th>
-    </tr>
-    {% for pago in pagos %}
-    <tr>
-        <th>{{pago.user.username}}</th>
-        <th>{{pago.fecha_pago}}</th>
-        <th>{{pago.codigo_curso.codigo}}</th>
-        <th>{{pago.tipo_pago.nombre}}</th>
-        <th>{{pago.moneda.nombre}}</th>
-        <th>{{pago.cantidad}}</th>
-        <th><button>Eliminar</button><button>Editar</button></th>
-    </tr>  
-    {% endfor%}
+<table id="data_table" class="table table-dark table-hover" style="width:100%">
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Fecha Pago</th>
+            <th>Codigo de Estudiante</th>
+            <th>Codigo De Curso</th>
+            <th>Tipo de pago</th>
+            <th>Monto</th>
+            <th>Tipo de Moneda</th>
+        </tr>
+    </thead>
+    <tfoot>
+        <tr>
+            <th>ID</th>
+            <th>Fecha Pago</th>
+            <th>Codigo de Estudiante</th>
+            <th>Codigo De Curso</th>
+            <th>Tipo de pago</th>
+            <th>Monto</th>
+            <th>Tipo de Moneda</th>
+        </tr>
+    </tfoot>
 </table>
+<script type="text/javascript">
+    $(document).ready(() => {
+        $('#data_table').DataTable({
+            ajax: {
+                    url: '/pagos/pagos/',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: {
+                        content: 'xxx',
+                        csrfmiddlewaretoken: '{{ csrf_token }}',
+                        action: 'listaPagos',
+                    },
+                    dataSrc: 'data'
+                },
+                language: {
+                    url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json'
+                },
+                columns: [
+                    { data: 'id' },
+                    { data: 'fecha_pago' },
+                    { data: 'user' },
+                    { data: 'codigo_curso' },
+                    { data: 'tipo_pago' },
+                    { data: 'cantidad' },
+                    { data: 'moneda' },
+                ],
+                rowId: 'id',
+                "columnDefs": [
+                    { searchable: false, targets: 5 }
+                ]
+        }) 
+        
+    })
+</script>
 {% endblock content %}
+
