--- a/mysite/templates/pagos/control.html
+++ b/mysite/templates/pagos/control.html
@@ -4,10 +4,34 @@
     <!-- <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" /> -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"/>
-    
+    <style>
+        .dtrg-group.dtrg-start.dtrg-level-0 td{
+            background-color: #353535;
+            color: white;
+        }
+        tr.dtrg-group.dtrg-start.dtrg-level-1 td {
+            padding-left: 1.5em;
+        }
+        tr.odd td:first-child,
+        tr.even td:first-child {
+            padding-left: 4em;
+        }
+        td.sub, tr.subCabecera td {
+            padding-left: 1.5em;
+        }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="//cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
+    <link type="text/css" href="https://cdn.datatables.net/rowgroup/1.1.2/css/rowGroup.dataTables.min.css"></link>
+    <script src="https://cdn.datatables.net/rowgroup/1.1.2/js/dataTables.rowGroup.min.js"></script>
+    <script src="https://cdn.datatables.net/fixedheader/3.1.8/js/dataTables.fixedHeader.min.js"></script>
+    <!-- <script src="https://cdn.datatables.net/buttons/1.7.0/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.53/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.print.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/1.7.0/js/buttons.html5.min.js"></script> -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script> -->
     {% endblock scripts %}
@@ -15,33 +39,76 @@
 
 {% block content %}
 {% csrf_token %}
-<table id="data_table" class="table table-dark table-hover" style="width:100%">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Fecha Pago</th>
-            <th>Codigo de Estudiante</th>
-            <th>Codigo De Curso</th>
-            <th>Tipo de pago</th>
-            <th>Monto</th>
-            <th>Tipo de Moneda</th>
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-            <th>ID</th>
-            <th>Fecha Pago</th>
-            <th>Codigo de Estudiante</th>
-            <th>Codigo De Curso</th>
-            <th>Tipo de pago</th>
-            <th>Monto</th>
-            <th>Tipo de Moneda</th>
-        </tr>
-    </tfoot>
-</table>
+<!-- <a href="http://127.0.0.1:8000/pagos/pagos_excel.xls" download>Descargar</a> -->
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col">
+            <label for="start_date">Fecha de inicio:</label>
+            <input type="date" placeholder="dd/mm/yyyy" id="start_date"></input>
+        </div>
+        <div  class="col">
+            <label for="finish_date">Fecha final:</label>
+            <input type="date" placeholder="dd/mm/yyyy" id="finish_date"></input>
+        </div>
+        <div  class="col">
+            <label for="user_code">Codigo de Usuario:</label>
+            <input type="search" id="user_code">
+        </div>
+    </div>
+    <table id="data_table" class="table table-striped table-bordered table-hover" style="width:100%;">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Fecha Pago</th>
+                <th>Codigo de Estudiante</th>
+                <th>Codigo De Curso</th>
+                <th>Tipo de pago</th>
+                <th>Tipo de Moneda</th>
+                <th>Monto</th>
+            </tr>
+        </thead>
+        <tfoot>
+            <tr>
+                <th>ID</th>
+                <th>Fecha Pago</th>
+                <th>Codigo de Estudiante</th>
+                <th>Codigo De Curso</th>
+                <th>Tipo de pago</th>
+                <th>Tipo de Moneda</th>
+                <th>Monto</th>
+            </tr>
+        </tfoot>
+    </table>
+</div>
 <script type="text/javascript">
+    /* $.fn.dataTable.ext.search.push(
+        ( settings, data, dataIndex ) => {
+            const min = $('#start_date').val().toLocaleString('es-US', {dateStyle: 'short'})
+            const max = $('#finish_date').val().toLocaleString('es-US', {dateStyle: 'short'})
+            const dateColumn = data[1].toLocaleString('es-US', {dateStyle: 'short'})
+            console.log(min)
+            console.log(max)
+            console.log(dateColumn)
+            if ( dateColumn>min && dateColumn<max )
+            {
+                return true
+            }
+            return false
+        }
+    ) */
+    $.fn.dataTable.ext.search.push(
+        ( settings, data, dataIndex ) => {
+            const code = $('#user_code').val()
+            const codeColumn = data[2]
+            if ( code == codeColumn || code === '')
+            {
+                return true
+            }
+            return false
+        }
+    )
     $(document).ready(() => {
-        $('#data_table').DataTable({
+        let table = $('#data_table').DataTable({
             ajax: {
                     url: '/pagos/pagos/',
                     type: 'POST',
@@ -53,24 +120,52 @@
                     },
                     dataSrc: 'data'
                 },
+                /* dom: 'Bfrtip',
+                buttons: ['csv', 'excel', 'pdf'], */
+                scrollY: '70vh',
+                scrollCollapse: true,
                 language: {
                     url: '//cdn.datatables.net/plug-ins/1.10.24/i18n/Spanish.json'
                 },
+                orderCellsTop: true,
+                fixedHeader: true,
                 columns: [
                     { data: 'id' },
                     { data: 'fecha_pago' },
                     { data: 'user' },
                     { data: 'codigo_curso' },
                     { data: 'tipo_pago' },
-                    { data: 'cantidad' },
                     { data: 'moneda' },
+                    { data: 'cantidad' },
                 ],
-                rowId: 'id',
-                "columnDefs": [
+                order: [[2, 'asc'], [4, 'asc']],
+                rowGroup: {
+                    dataSrc: [ 'user', 'tipo_pago' ],
+                    endRender: ( rows, group, index ) => {
+                        let totalPago = rows
+                        .data()
+                        .pluck('cantidad')
+                        .reduce((a, b) => {
+                            return a + b*1
+                        }, 0)
+                        return $('<tr/>')
+                        .append( `<td colspan="4" class=${index%2===0 ? "tot" : "sub"}>${index%2===0 ?  'Total:' : 'SubTotal:'}</td>` )
+                        .append( `<td>${totalPago}</td>` )
+
+                    },
+                },
+                columnDefs: [ 
+                    { targets: [2, 4], visible: false },
                     { searchable: false, targets: 5 }
-                ]
-        }) 
-        
+                ],
+                rowId: 'id'
+        })
+        /* $('#start_date, #finish_date').focusout( () => {
+            table.draw();
+        }) */
+        $('#user_code').keyup( () => {
+            table.draw();
+        })
     })
 </script>
 {% endblock content %}
