--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -16,8 +16,9 @@
         <div class="dropdown">
         <li class="dropbtn">Pagos</li>
             <div class="dropdown-content">
-                <a class="navbar-a" href="{% url 'pagos:pagos_control' %}">Control</a>
+                <a class="navbar-a" href="{% url 'pagos:pagos_control' %}">Control de Pagos</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
+                <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
             </div>
         </div>
         <div class="dropdown">
@@ -25,6 +26,7 @@
                 <div class="dropdown-content">
                     <a class="navbar-a" href="{% url 'usuarios:usuarios_listado' %}">Listado</a>
                     <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
+                    <a class="navbar-a" href="{% url 'usuarios:create_curso' %}">Crear Curso</a>
                 </div>
             </div>
         </div>
