fixed user create screen

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -27,6 +27,7 @@
                     <a class="navbar-a" href="{% url 'usuarios:usuarios_listado' %}">Listado</a>
                     <a class="navbar-a" href="{% url 'usuarios:createuser_view' %}">Ingreso Usuario</a>
                     <a class="navbar-a" href="{% url 'usuarios:create_curso' %}">Crear Curso</a>
+                    <a class="navbar-a" href="{% url 'usuarios:asignar_curso' %}">Asignar Curso</a>
                 </div>
             </div>
         </div>
