--- a/mysite/templates/usuarios/asignar_curso.html
+++ b/mysite/templates/usuarios/asignar_curso.html
@@ -5,17 +5,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Crear Usuario</h1>
+<h1>Asignar curso a usuario</h1>
 <hr>
 
 <form action="" method="post">
 		<div class="form-container">
 			{% csrf_token %}
 			{{form1}}
-            {{form2}}
 		</div>
 	<div class="btn-container">
-		<input class="btn btn-buscar" type="submit" value="Crear Estudiante">
+		<input class="btn btn-buscar" type="submit" value="Realizar asignacion">
 	</div>
 </form>
 {% endblock content %}
