fixed user create screen

--- a/mysite/templates/usuarios/create_curso.html
+++ b/mysite/templates/usuarios/create_curso.html
@@ -5,7 +5,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Crear Usuario</h1>
+<h1>Crear Curso</h1>
 <hr>
 
 <form action="" method="post">
