--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -21,6 +21,7 @@
                 <a class="navbar-a" href="{% url 'pagos:pagos_eliminados' %}">Pagos Eliminados</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_ingreso' %}">Ingreso de Pagos</a>
                 <a class="navbar-a" href="{% url 'pagos:pagos_saldo' %}">Saldos</a>
+                <a class="navbar-a" href="{% url 'pagos:cobros_extra' %}">Cobros Extra</a>
             </div>
         </div>
         <div class="dropdown">
