--- a/mysite/templates/pagos/control.html
+++ b/mysite/templates/pagos/control.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
         .dtrg-group.dtrg-start.dtrg-level-0 td{
-            background-color: #353535;
+            background-color: #53BDD4;
+
             color: white;
         }
         tr.dtrg-group.dtrg-start.dtrg-level-1 td {
@@ -36,7 +37,7 @@
         background-color: RoyalBlue;
         }
         .modal-confirm {		
-            color: #434e65;
+            color: #29457f;
             width: 525px;
         }
         .modal-confirm .modal-content {
